--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,17 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+#start {
+  width: 20%;
+  height: 100%;
+  /* padding: 10%, 0; */
+  margin-left: auto;
+  margin-right: auto;
+  border: #FEF2BF 1px solid;
+  background-color: grey;
+}
+
+#level-title {
+  margin: 20px auto;
+}
